[gd_scene load_steps=6 format=2]

[ext_resource path="res://spike/movingspike.png" type="Texture" id=1]
[ext_resource path="res://spike/MovingSpike.gd" type="Script" id=2]
[ext_resource path="res://box/explode.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 20 )

[node name="MovingSpike" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="MovingSpike" type="Area2D" parent="."]

[node name="GFX" type="Sprite" parent="MovingSpike"]
texture = ExtResource( 1 )

[node name="Spike Collider" type="CollisionShape2D" parent="MovingSpike"]
position = Vector2( 0, 19 )
shape = SubResource( 1 )

[node name="Block Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="Stab" type="Timer" parent="."]
wait_time = 2.2

[node name="Stab Pre-delay" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="Ground" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -14.474
bus = "SFX"

[connection signal="body_entered" from="MovingSpike" to="." method="_on_MovingSpike_body_entered"]
[connection signal="timeout" from="Stab" to="." method="_on_Stab_timeout"]
[connection signal="timeout" from="Stab Pre-delay" to="." method="_on_Stab_Predelay_timeout"]
